--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/map_feature.jpg" alt="探索地圖功能展示">
+                        <img src="images/map_feature.png" alt="探索地圖功能展示">
                     </div>
                 </div>
 
@@ -43,7 +43,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/task_management.jpg" alt="任務管理功能展示">
+                        <img src="images/task_management.png" alt="任務管理功能展示">
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/focus_mode.jpg" alt="專注模式功能展示">
+                        <img src="images/focus_mode.png" alt="專注模式功能展示">
                     </div>
                 </div>
 
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/coffee_music.jpg" alt="咖啡音樂功能展示">
+                        <img src="images/coffee_music.png" alt="咖啡音樂功能展示">
                     </div>
                 </div>
 
@@ -82,7 +82,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/personal_profile.jpg" alt="個人檔案功能展示">
+                        <img src="images/personal_profile.png" alt="個人檔案功能展示">
                     </div>
                 </div>
             </div>
