更新圖片和樣式與首頁檔案

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cafeting - 為工作而生的咖啡地圖</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
     <div class="loading-screen">
@@ -31,7 +32,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/map_feature.png" alt="探索地圖功能展示">
+                        <img src="images/map_feature.jpg" alt="探索地圖功能展示">
                     </div>
                 </div>
 
@@ -39,11 +40,11 @@
                     <div class="feature-text">
                         <h2 class="feature-title">任務管理</h2>
                         <p class="feature-description">
-                            簡單快速建立待完成任務輕鬆管理當日行程。
+                            簡單快速建立待完成任務，輕鬆管理當日行程。
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/task_management.png" alt="任務管理功能展示">
+                        <img src="images/task_management.jpg" alt="任務管理功能展示">
                     </div>
                 </div>
 
@@ -56,7 +57,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/focus_mode.png" alt="專注模式功能展示">
+                        <img src="images/focus_mode.jpg" alt="專注模式功能展示">
                     </div>
                 </div>
 
@@ -69,7 +70,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/coffee_music.png" alt="咖啡音樂功能展示">
+                        <img src="images/coffee_music.jpg" alt="咖啡音樂功能展示">
                     </div>
                 </div>
 
@@ -82,7 +83,7 @@
                         </p>
                     </div>
                     <div class="feature-image">
-                        <img src="images/personal_profile.png" alt="個人檔案功能展示">
+                        <img src="images/personal_profile.jpg" alt="個人檔案功能展示">
                     </div>
                 </div>
             </div>
