更新圖片和樣式與首頁檔案

--- a/index.html
+++ b/index.html
@@ -27,12 +27,23 @@
                     <div class="feature-text">
                         <h2 class="feature-title">探索地圖</h2>
                         <p class="feature-description">
-                            輕鬆發現周邊精選咖啡館，透過各種指標篩選，
-                            找到最適合你的咖啡館。
+                            輕鬆發現周邊精選咖啡館，找尋工作環境再也不是問題。
                         </p>
                     </div>
                     <div class="feature-image">
                         <img src="images/map_feature.jpg" alt="探索地圖功能展示">
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <div class="feature-text">
+                        <h2 class="feature-title">清晰的資訊展示</h2>
+                        <p class="feature-description">
+                            豐富的指標篩選，找到最適合你的命定咖啡館。
+                        </p>
+                    </div>
+                    <div class="feature-image">
+                        <img src="images/map_callout.jpg" alt="咖啡廳資訊展示">
                     </div>
                 </div>
 
@@ -63,7 +74,7 @@
 
                 <div class="feature">
                     <div class="feature-text">
-                        <h2 class="feature-title">想來點音樂？也可以！</h2>
+                        <h2 class="feature-title">不如...來點音樂？</h2>
                         <p class="feature-description">
                             播放我們精心挑選的音樂清單，
                             隨心切換不同風格，讓每一刻都充滿韻律。
