--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <div class="background-points" id="backgroundPoints"></div>
             <div class="logo">Cafeting</div>
             <h2 class="tagline">為工作而生的咖啡地圖</h2>
-            <button class="cta-button" onclick="window.location.href='https://apps.apple.com/tw/app/cafeting/id6737536512'">立即下載 App</button>
+            <div class="button-group">
+                <button class="cta-button" onclick="window.location.href='https://apps.apple.com/tw/app/cafeting/id6737536512'">立即下載 App</button>
+                <button class="cta-button web-map-button" onclick="window.location.href='map.html'">使用網頁地圖</button>
+            </div>
         </div>
 
         <section class="features-section">
