--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="logo">Cafeting</div>
             <h2 class="tagline">為工作而生的咖啡地圖</h2>
             <div class="button-group">
-                <button class="cta-button" onclick="window.location.href='https://apps.apple.com/tw/app/cafeting/id6737536512'">立即下載 App</button>
-                <button class="cta-button web-map-button" onclick="window.location.href='map.html'">使用網頁地圖</button>
+                <button class="cta-button" onclick="window.location.href='https://apps.apple.com/tw/app/cafeting/id6737536512'">下載 App</button>
+                <button class="cta-button web-map-button" onclick="window.location.href='map.html'">網頁地圖</button>
             </div>
         </div>
 
