點選地圖其他位置可關閉視窗

--- a/map.html
+++ b/map.html
@@ -670,6 +670,13 @@
                             }
                         });
                     });
+
+                    // 添加地圖點擊事件
+                    map.addListener('click', function() {
+                        if (currentInfoWindow) {
+                            currentInfoWindow.close();
+                        }
+                    });
                 })
                 .catch(error => console.error('Error:', error));
         }
