--- a/map.html
+++ b/map.html
@@ -531,52 +531,50 @@
 
                         const infoContent = `
                             <div class="cafe-info">
-                                <div class="cafe-header">
-                                    <h3>${cafe.name || '未知名稱'}</h3>
+                                <div class="cafe-basic-info">
+                                    <div class="cafe-name">${cafe.name}</div>
+                                    <div class="cafe-address">${cafe.address}</div>
+                                    <div class="cafe-hours">${cafe.hours || '未提供營業時間'}</div>
+                                    <div class="info-item">
+                                        <i class="fas fa-phone"></i>
+                                        <span>${cafe.phone || '未提供資訊'}</span>
+                                    </div>
                                 </div>
+                                
                                 <div class="cafe-details">
-                                    <p>
-                                        <i class="fas fa-clock"></i>
-                                        ${cafe.hours || '未提供營業時間'}
-                                    </p>
-                                    <p>
-                                        <i class="fas fa-map-marker-alt"></i>
-                                        ${cafe.address || '未提供地址'}
-                                    </p>
-                                    ${cafe.phone ? `
-                                        <p>
-                                            <i class="fas fa-phone"></i>
-                                            ${cafe.phone}
-                                        </p>
-                                    ` : ''}
-                                    <div class="status-item">
-                                        <i class="fas fa-plug" style="color: ${statusColors.outlets[cafe.outlets]}"></i>
-                                        ${cafe.outlets || '未提供資訊'}
-                                    </div>
-                                    <div class="status-item">
-                                        <i class="fas fa-volume-up" style="color: ${statusColors.noise[cafe.noise]}"></i>
-                                        ${cafe.noise || '未提供資訊'}
-                                    </div>
-                                    <div class="status-item">
-                                        <i class="fas fa-sun" style="color: ${statusColors.lighting[cafe.lighting]}"></i>
-                                        ${cafe.lighting || '未提供資訊'}
-                                    </div>
-                                    <div class="status-item">
-                                        <i class="fas fa-chair" style="color: ${statusColors.seating[cafe.seating]}"></i>
-                                        ${cafe.seating || '未提供資訊'}
-                                    </div>
-                                    <div class="status-item">
-                                        <i class="fas fa-hourglass-half" style="color: ${statusColors.timeLimit[cafe.timeLimit]}"></i>
-                                        ${cafe.timeLimit || '未提供資訊'}
-                                    </div>
-                                    ${cafe.website ? `
-                                        <div class="cafe-link">
-                                            <a href="${cafe.website}" target="_blank">
-                                                <i class="fas fa-external-link-alt"></i>
-                                                查看店家網站
-                                            </a>
+                                    <div class="details-row">
+                                        <div class="status-item">
+                                            <i class="fas fa-plug" style="color: ${statusColors.outlets[cafe.outlets]}"></i>
+                                            <span>${cafe.outlets || '未提供資訊'}</span>
                                         </div>
-                                    ` : ''}
+                                        <div class="status-item">
+                                            <i class="fas fa-volume-up" style="color: ${statusColors.noise[cafe.noise]}"></i>
+                                            <span>${cafe.noise || '未提供資訊'}</span>
+                                        </div>
+                                        <div class="status-item">
+                                            <i class="fas fa-sun" style="color: ${statusColors.lighting[cafe.lighting]}"></i>
+                                            <span>${cafe.lighting || '未提供資訊'}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="details-row">
+                                        <div class="status-item">
+                                            <i class="fas fa-chair" style="color: ${statusColors.seating[cafe.seating]}"></i>
+                                            <span>${cafe.seating || '未提供資訊'}</span>
+                                        </div>
+                                        <div class="status-item">
+                                            <i class="fas fa-hourglass-half" style="color: ${statusColors.timeLimit[cafe.timeLimit]}"></i>
+                                            <span>${cafe.timeLimit || '未提供資訊'}</span>
+                                        </div>
+                                        ${cafe.website ? `
+                                            <div class="status-item website-link">
+                                                <a href="${cafe.website}" target="_blank">
+                                                    <i class="fas fa-external-link-alt"></i>
+                                                    <span>查看網站</span>
+                                                </a>
+                                            </div>
+                                        ` : '<div class="status-item"></div>'}
+                                    </div>
                                 </div>
                             </div>
                         `;
