增加關於我們頁面

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
+    <nav class="top-nav">
+        <div class="nav-links">
+            <a href="https://apps.apple.com/tw/app/cafeting/id6737536512" class="nav-link">下載 App</a>
+            <a href="map.html" class="nav-link">網頁地圖</a>
+            <a href="about.html" class="nav-link">關於我們</a>
+        </div>
+    </nav>
+
     <div class="loading-screen">
         <div class="map-container" id="mapContainer"></div>
     </div>
