--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="top-nav">
         <div class="nav-links">
             <a href="https://apps.apple.com/tw/app/cafeting/id6737536512" class="nav-link">下載 App</a>
-            <a href="map.html" class="nav-link">網頁地圖</a>
+            <a href="https://forms.gle/X4GVsoktoJog47wa6" class="nav-link">搭讀(beta)</a>
             <a href="about.html" class="nav-link">關於我們</a>
         </div>
     </nav>
@@ -28,7 +28,7 @@
             <h2 class="tagline">為工作而生的咖啡地圖</h2>
             <div class="button-group">
                 <button class="cta-button" onclick="window.location.href='https://apps.apple.com/tw/app/cafeting/id6737536512'">下載 App</button>
-                <button class="cta-button web-map-button" onclick="window.location.href='map.html'">網頁地圖</button>
+                <button class="cta-button web-map-button" onclick="window.location.href='https://forms.gle/X4GVsoktoJog47wa6'">搭讀(beta)</button>
             </div>
         </div>
 
